# protohackers

./: .gitignore  README.md  buildRustImage.sh  flake.nix  fly.toml  justfile
rust/: .rustfmt.toml  Cargo.toml  default.nix  rust-toolchain.toml
rust/src/: main.rs  problem0.rs  problem00.rs  problem01.rs  problem02.rs  problem03.rs  problem1.rs
rust/src/problems/: mod.rs  problem00.rs  problem01.rs  problem02.rs  problem03.rs
