[package]
name = "proto-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
clap = { version = "3.2.21", features = ["derive", "env"] }
enum_dispatch = "0.3.8"
env_logger = "0.9.0"
log = "0.4.17"
rusqlite = { version = "0.28.0" } 
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["rt", "net", "macros", "io-util", "rt-multi-thread"] }
